--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+button {
+    cursor: pointer;
+    cursor: hand;
+}
+.app {
+    
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+.overlay {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    
+}
+.app-multiselect{
+   
+   top: 100px;
+   left: 100px;
+   z-index: 2; 
+   display: inline-block;
+   position: relative;
+}
+.multiselect {
+    display: flex;
+    flex-direction: column-reverse;
+    
+    justify-content: center;
+}
+.hidden {
+    display: none;
+}
+.item-content {
+    border-bottom: 1px solid white;
+    font-size: 15px;
+    padding-left: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgray;
+    border-left: 2px solid black;
+    width: 345px;
+    height: 30px;
+    
+}
+.dropdown-category {
+    font-weight: 600;
+    font-size: 20px;
+    width: 340px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gray;
+    border-bottom: 1px solid white;
+    padding: 3px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dropdown {
+    padding-bottom: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.item-content, .dropdown-category {
+    cursor: pointer;
+    cursor: hand;
+}
+.dropdown-category:hover {
+    opacity: 80%;
+}
+.item-content:hover {
+    background-color: white;
+    border: 1px solid black;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input{
+    z-index: 5;
+    width: 339px;
+    height: 30px;
+    padding-left: 3px;
 }
 
-.App-link {
-  color: #61dafb;
+.input-button {
+    width: 348px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-del-all {
+    position: absolute;
+    z-index: 4;
+    width: 348px;
+    
 }
